--- a/PI/src/Css/carrinho.css
+++ b/PI/src/Css/carrinho.css
@@ -201,183 +201,7 @@
 }
 
 
-
-
-
-
-.container_final_cart{
-    display: flex;
-    width: 90%;
-    justify-content: space-between; /* Melhor do que center se você quer alinhá-los adequadamente */
-    align-items: flex-start; /* Alinhamento ao topo */
-    height: auto; /* Permite altura dinâmica com base no conteúdo */
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    padding: 1rem;
-    border-radius: 5px;
-    margin-top: 5rem;
-
-}
-
-
-.container_final_cart_left{
-    display: flex;
-    width: 70%;
-    flex-direction: column;
-    gap: 0.5rem;
-  
-}
-
-.conatiner_endereco_ativo_cart{
-    display: flex;
-    width: 100%;
-    gap: 1rem;
-    align-items: start;
-}
-
-.conatiner_endereco_ativo_cart input{
-    display: flex;
-    width: 15px;
-    height: 15px;
-}
-
-.text_1_cart{
-    display: flex;
-    color: #4A4A4A;
-    font-weight: 600;
-    font-size: 15px;
-    gap: 5px;
-}
-
-.text_2_cart{
-    display: flex;
-    font-weight: 400;
-    font-size: 15px;
-}
-
-
-
-.container_input_cep_cart{
-    display: flex;
-    gap: 5px;
-}
-
-.container_input_cep_cart input{
-    display: flex;
-    border-radius: 5px;
-    border: 1px solid #aaaaaa ;
-    outline: none;
-    font-size: 15px;
-    color: #4A4A4A;
-    padding-left: 1rem;
-    height: 35px;
-    width: 20%;
-}
-
-.container_input_cep_cart .btn_cep_cart{
-    display: flex;
-    height: 35px;
-    justify-content: center;
-    align-items: center;
-    width: 5%;
-    border-radius: 5px;
-    background-color: transparent;
-    border: 1px solid #aaaaaa ;
-    cursor: pointer;
-    transition: all 0.2s ease;
-
-}
-
-.container_input_cep_cart .btn_cep_cart i{
-    display: flex;
-    color: #4A4A4A;
-}
-
-.container_input_cep_cart .btn_cep_cart:hover{
-    background-color: #4A4A4A;
-    border: none;
-}
-.container_input_cep_cart .btn_cep_cart:hover i{
-    color: white;
-}
-
-.cep_text_cart{
-    display: flex;
-    color: #aaaaaa;
-    font-size: 12px;
-    text-decoration: underline;
-
-}
-
-.container_final_cart_right{
-    display: flex;
-    width: 30%; /* Reduza para garantir que caiba no layout */
-    min-height: 200px; /* Adicione uma altura mínima para teste */
-    height: auto; /* Permita expansão caso necessário */
-    flex-direction: column; /* Certifique-se de que o layout interno seja linear */
-    align-items: flex-start;
-    padding: 1rem; /* Adicione preenchimento */
-}
-
-
-.container_text_preco_final_cart{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.sub_total_text_cart, .sub_total_valor_cart, .frete_total_text_cart, .frete_total_valor_cart{
-    display: flex;
-    color: #4A4A4A;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.total_text_cart,.total_valor_cart{
-    display: flex;
-    color: #4A4A4A;
-    font-weight: 600;
-    font-size: 17px;
-}
-
-.btn_final_cart{
-    display: flex;
-    width: 100%;
-    height: 40px;
-    background-color: #4A4A4A;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 15px;
-    font-weight: 500;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    outline: none;
-    margin-top: 2rem;
-}
-
-.btn_final_cart:hover{
-    background-color: #707070;
-}
-
-.shape_sacola_final{
-    display: flex;
-    width: 100%;
-    height: 1px;
-    background-color: #ebebeb;
-    margin-bottom: 0.5rem;
-}
-
-
-.detalhes_produto_cart_mobile{
-    display: none;
-}
-
-
-.container_endereco_mobile_cart{
-    display: none;
-}
+.
 
 
 
