--- a/PI/src/Css/historico_pedido.css
+++ b/PI/src/Css/historico_pedido.css
@@ -117,12 +117,13 @@
     position:absolute;
     overflow: hidden;
     visibility: hidden;
-
     height: 0%;
     display:flex;
     z-index: 1000;
     background-color:#f7f7f7 ;
     opacity: 0;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    padding: 1rem;
 }
 
 .active_pedido{
@@ -134,6 +135,8 @@
     position: sticky;
     overflow: hidden;
 
+    width: 100%;
+
 
 }
 
@@ -141,19 +144,61 @@
 
 .container_historico_pedido .container_final_cart_right{
     width: 40%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
+
+.container_historico_pedido .container_final_cart_right .sub_total_text_cart, .sub_total_valor_cart{
+    display: flex;
+    color: #4A4A4A;
+    font-size: 13px;
+}
+
+.shape_sacola_final{
+    display: flex;
+    width: 100%;
+    height: 1px;
+    background-color: #b9b9b9;
+    margin-bottom: 1.5rem;
+}
+
+.container_text_preco_final_cart{
+    display: flex;
+    justify-content: space-between;
+}
+
 .container_historico_pedido .container_final_cart_left{
     width: 60%;
     height: 20vh;
     justify-content: center;
+    align-self: center;
    
 }
 
 
 
 
+.btn_final_cart{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    background-color: #4A4A4A;
+    color: white;
+    font-weight: 500;
+    font-size: 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+}
+.btn_final_cart:hover{
+    background-color: #353535;
+    cursor: pointer;
 
+}
 
 
 
