--- a/PI/src/Css/perfil.css
+++ b/PI/src/Css/perfil.css
@@ -69,7 +69,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    padding-top: 2rem;
+    padding-top: 7rem;
     flex-direction: column;
     gap: 5rem;
     justify-content: center;
@@ -82,7 +82,6 @@
     width: 100%;
     justify-content: end;
     gap: 20px;
-    padding-right: 4rem;
 
 }
 
@@ -90,7 +89,7 @@
 .btn_salvar, .btn_cancelar{
     display: flex;
     width: 100px;
-    height: 30px;
+    height: 40px;
     justify-content: center;
     align-items: center;
     border: none;
@@ -131,7 +130,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 90%;
-    gap: 4rem;
+    gap: 5rem;
 }
 
 
@@ -175,12 +174,13 @@
 
 .input_item_perfil input{
     display: flex;
-    width: 270px;
+    width: 350px;
     height: 35px;
-    border: 1px solid rgb(170, 170, 170);
+    /* border: 1px solid rgb(170, 170, 170); */
+    border: none;
     outline: none;
     border-radius: 5px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
     padding-left: 10px;
     color: #4A4A4A;
 }
