--- a/PI/src/Css/style.css
+++ b/PI/src/Css/style.css
@@ -70,9 +70,24 @@ body{
 main{
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   flex-direction: column;
 } 
 
+.main2{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  margin-bottom: 5rem;
+} 
+
+.body2{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+
+}
 
