--- a/PI/src/Css/categorias.css
+++ b/PI/src/Css/categorias.css
@@ -13,7 +13,7 @@
     width: 30%;
     height: 100%;
     flex-direction: column;
-    padding-top: 3rem;
+    padding-top: 2rem;
     justify-content: center;
     align-items: center;
     gap: 2rem;
@@ -45,12 +45,13 @@
 .container_left_filtro{
     display: flex;
     width: 70%;
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(250, 250, 250);
     padding: 1rem;
     border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     flex-direction: column;
     gap: 1rem;
+    margin-bottom: 1rem;
 
 }
 
@@ -184,7 +185,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 90%;
-    gap: 3rem;
+    gap: 5rem;
     padding-top: 2rem;
 }
 
@@ -462,12 +463,13 @@ MOBILE */
 
 
 @media (max-width: 520px){
-    .wrap__filtro_right{
+    /* .wrap__filtro_right{
         gap: 1rem;
     }
     .wrap__filtro_right .card_produto{
         height: 250px;
         width: 170px;
+        background-color: aqua;
 
     }
 
@@ -496,7 +498,7 @@ MOBILE */
     }
     .btn_content_card_produto .btn_buy_card{
         font-size: 12px;
-    }
+    } */
     
     
     
