--- a/PI/src/Css/navbar.css
+++ b/PI/src/Css/navbar.css
@@ -7,6 +7,10 @@
     align-items: center;
     justify-content: center;
     height: 80px;
+    border-bottom: 1px solid rgb(234, 234, 234);
+    position:fixed;
+    z-index: 5;
+    background-color: white;
   
   }
   
