--- a/PI/src/Css/sobre_nos.css
+++ b/PI/src/Css/sobre_nos.css
@@ -19,7 +19,7 @@
 .Banner_Sobre_Nos{
     display: flex;
     width: 100%;
-    height: 80vh;
+    height: 70vh;
     flex-direction: column;
 }
 
@@ -358,6 +358,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 
@@ -369,6 +370,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    /* overflow: hidden; */
+    background-color: aqua;
 }
 
 
@@ -379,6 +382,7 @@
     height: 400px;
     border-radius: 5px;
     padding: 10px;
+
 }
 
 
@@ -504,7 +508,7 @@
     align-items: center;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
-    z-index: 5;
+    z-index: 4;
 }
 
 .btn_prev_card_avaliacao i, .btn_next_card_avaliacao i{
@@ -723,7 +727,7 @@
 
 .input_confira_sobre{
     display: flex;
-    width: 400px;
+    width: 500px;
     height: 35px;
     outline: none;
     border: none;
