--- a/PI/src/Css/style.css
+++ b/PI/src/Css/style.css
@@ -78,9 +78,11 @@ main{
 .main2{
   display: flex;
   width: 100%;
-  height: 100%;
+  height:100%;
   flex-direction: column;
   margin-bottom: 5rem;
+  overflow: unset;
+  margin-top: 100px;
 } 
 
 .body2{
