--- a/PI/src/Css/historico_pedido.css
+++ b/PI/src/Css/historico_pedido.css
@@ -29,19 +29,34 @@
     display: flex;
     width: 90px;
     height: 35px;
-    border-radius: 5px;
     justify-content: center;
     align-items: center;
     font-size: 14px;
     color: #4A4A4A;
     font-weight: 600;
     cursor: pointer;
+    position: relative;
 }
 
-.hp{
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    background-color: rgb(238, 238, 238);
+
+.btn_pedidos_historico:before{
+    content: '';
+    position:absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 0px;
+    height: 2px;
+    border-radius: 5px;
+    background-color:#949494;
+    transition: all 0.5s ease;
 }
+
+
+.btn_pedidos_historico:hover:before{
+    width: 100%;
+}
+
+
 
 
 .container_historico_pedido .produto_item_cart-1{
