--- a/PI/src/Css/navbar.css
+++ b/PI/src/Css/navbar.css
@@ -9,7 +9,7 @@
     height: 80px;
     border-bottom: 1px solid rgb(234, 234, 234);
     position:fixed;
-    z-index: 5;
+    z-index: 15;
     background-color: white;
   
   }
@@ -347,9 +347,30 @@ Area Responsiva */
 
 
 @media (max-width:1019px){
+  .menu{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
+    border-bottom: 1px solid rgb(234, 234, 234);
+    position:unset;
+    z-index: unset;
+    background-color: white;
+  
+  }
+  
+  /* .container-menu{
+    display: flex;
+    width: 100%;
+    height: auto;
+    align-items: center;
+
+  } */
+  
   .container-menu{
     justify-content: space-evenly;
-    height: 100vh;
+    height: 100%;
   }
   .lista-item{
     display: none;
