--- a/PI/src/Css/sobre_nos.css
+++ b/PI/src/Css/sobre_nos.css
@@ -31,6 +31,7 @@
     position: relative;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2rem;
 
 }
 
@@ -370,8 +371,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* overflow: hidden; */
-    background-color: aqua;
+    overflow: hidden;
 }
 
 
@@ -2644,7 +2644,7 @@ font-size: 15px;
     .content_about_text{
         display: flex;
         width: 100%;
-        height: 80%;
+        height: 85%;
         justify-content: center;
         align-items: center;
     }
@@ -2882,7 +2882,7 @@ padding-bottom: 2rem;
         display: flex;
         width: 100%;
         border-radius: 100px 100px 0px 0px;
-        height: 100%;
+        height: 90%;
         background-color: rgb(245, 245, 245);
         justify-content: center;
         align-items: center;
