--- a/PI/src/Css/favoritos.css
+++ b/PI/src/Css/favoritos.css
@@ -12,7 +12,7 @@
   height: 100vh; /* Termina antes do final do container pai */
   justify-content: center;
   display: flex;
-  border-right: 1px solid #d1d1d1;
+  /* border-right: 1px solid #d1d1d1; */
   width: 25%;
 }
 
@@ -33,6 +33,7 @@
     font-size: 20px;
     font-weight: 600;
     color: #4A4A4A;
+    padding-bottom: 1rem;
 }
 
 
@@ -51,34 +52,33 @@
     align-items: center;
     gap: 10px;
     transition: all 0.2s ease;
-}
-
-.link_favorito_left{
-    display: flex;
     text-decoration: none;
-    color: #686868;
-    font-weight: 500;
-    transition: all 0.2s ease;
-    font-size: 15px;
-
+    padding: 5px;
+    border-radius: 5px;
 }
 
+
+
+
+.item_favorito_left .link_favorito_left{
+    display: flex;
+    color: #4A4A4A;
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    
+}
 
 .item_favorito_left:hover{
-    transform: translateX(20px);
+    transform: translateX(10px);
+    background-color: #dddddd;
+    color: white;
 }
 
-
-.icon_favorito_content{
-    display: flex;
-    color: #686868;
-    font-size: 20px;
+.item_favorito_left i{
+    color: #4A4A4A;
 }
-
-
-
-
-
 
 
 
@@ -122,6 +122,7 @@
     width: 100%;
     flex-wrap: wrap;
     gap: 110px;
+    justify-content: center;
 }
 
 
