--- a/PI/src/Css/home.css
+++ b/PI/src/Css/home.css
@@ -156,7 +156,7 @@
 .list_cards_categoria .item_cards_categoria{
     width: 150px;
     height: 200px;
-    background-color: rgb(246, 246, 246);
+    background-color: #6875e8;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -184,6 +184,9 @@
 
 
 }
+.list_cards_categoria .item_cards_categoria:hover .text_cards_categoria{
+    color:#4A4A4A;
+}
 
 
 
@@ -205,7 +208,7 @@
 
 .text_cards_categoria{
     font-weight: 500;
-    color: #4A4A4A;
+    color: #ffffff;
     padding-top: 1rem;
     
     
