--- a/PI/src/Css/pedido_personalizado_adm.css
+++ b/PI/src/Css/pedido_personalizado_adm.css
@@ -1,149 +1,146 @@
-
-
-.left_dados_produto_pedido_personalizado{
-    flex-direction: column;
-    width: 65%;
-    height: 100%;
+.conatiner_cadastro_adm_pedido_body_left_persononalizado{
     display: flex;
+    width: 50%;
+}
+
+.conatiner_cadastro_adm_pedido_body_right_persononalizado{
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 
-.right_dados_produto_pedido_personalizado{
-    width: 35%;
-    height: 100%;
-    gap: 2rem;
+.item_flex_pedido textarea{
     display: flex;
-    flex-direction: column;
+    border-radius: 5px;
+    border: none;
+    border: 1px solid #c9c9c9;
+    outline: none;
+    padding: 10px;
+    color: #707070;
+    width: 600px;
+    height: 200px;
+    padding: 10px;
+    resize: none;
 
 }
 
 
-.item_column_pedido textarea{
-    width: 95%;
-    height:200px;
+.conatiner_cadastro_adm_pedido_footer{
+    display: flex;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.conatiner_img_pedido_perso_adm{
+    display: flex;
+    width: 100%;
+    border: 1px solid #c9c9c9;
     border-radius: 5px;
     padding: 1rem;
-    color:#4A4A4A;
-    font-size: 12px;
-    background-color: transparent;
-    border: 1px solid #aaaaaa ;
-
+    height: 200px;
 }
 
+.mobile_btn_salvar{
+    display: none;
+}
 
-@media (max-width:1289px){
+@media (max-width: 1443px) {
+    .item_flex_pedido textarea{
+        width: 500px;
+    }
     
-.left_dados_produto_pedido_personalizado{
-    flex-direction: column;
-    width: 50%;
-    height: 100%;
-    display: flex;
 }
-
-
-.right_dados_produto_pedido_personalizado{
-    width: 50%;
-    height: 100%;
-    gap: 2rem;
-    display: flex;
-    flex-direction: column;
-
+@media (max-width: 1257px) {
+    .item_flex_pedido textarea{
+        width: 400px;
+    }
+    
 }
-
-
-.item_column_pedido textarea{
-    width: 95%;
-    height:200px;
-    border-radius: 5px;
-    padding: 1rem;
-    color:#4A4A4A;
-    font-size: 12px;
-    background-color: transparent;
-    border: 1px solid #aaaaaa ;
-
-}
-
-
-
-}
-
-
-
-
-@media (max-width:921px){
-    .item_column_pedido input{
+@media (max-width: 1050px) {
+    .item_flex_pedido textarea{
         width: 300px;
     }
-}
-@media (max-width:757px){
-    .container_dados_produto_pedido_personalizado{
-        display: flex;
-        gap: 2rem;
+    .item_flex_pedido input{
+        width: 230px;
+        
+    }
     
-    }
-    .right_dados_produto_pedido_personalizado, .left_dados_produto_pedido_personalizado{
-        width: 100%;
+}
 
+
+@media (max-width: 861px) {
+    .conatiner_cadastro_adm_pedido_body_left_persononalizado{
+        display: flex;
+        width: 100%;
+        justify-content: center;
     }
-    .right_dados_produto_pedido_personalizado{
+    
+    .conatiner_cadastro_adm_pedido_body_right_persononalizado{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        gap: 1rem;
         justify-content: center;
         align-items: center;
     }
-   
-}
-   
-    
-    @media (max-width: 521px){
-    
-    
-        
-    .item_column_pedido input{
-        display: flex;
+
+    .conatiner_cadastro_adm_pedido_body{
+        flex-direction: column;
+    }
+    .item_flex_pedido textarea{
+        width: 450px;
+        height: 150px;
+    }
+    .item_flex_pedido input{
         width: 250px;
-        height: 30px;
-        border-radius: 5px;
-        outline: none;
-        padding-left: 1rem;
-        color: #4A4A4A;
-        font-size: 13px;
-        border: 1px solid #c2c2c2 ;
-        background-color: transparent;
-    }
-    
-    .item_column_pedido .input_2{
-        width: 60px;
-    
-    }
-    
-    
-    
-    
-    }
-    
-    @media (max-width: 337px){
-    
-    
         
-    .item_column_pedido input{
+    }
+
+    .item_flex_pedido select{
+        width: 250px;
+    }
+
+    .conatiner_cadastro_adm_pedido_header{
+        justify-content: center;
+        align-items: center;
+    }
+  
+    
+}
+
+
+
+@media (max-width: 800px){
+    .mobile_btn_salvar{
         display: flex;
-        width: 160px;
-        height: 30px;
-        border-radius: 5px;
-        outline: none;
-        padding-left: 1rem;
-        color: #4A4A4A;
-        font-size: 13px;
-        border: 1px solid #c2c2c2 ;
-        background-color: transparent;
     }
-    
-    .item_column_pedido .input_2{
-        width: 40px;
-    
+    #conatiner_btn_adm_pc{
+        display: none;
     }
-    
-    
-    
-    
+
+}
+
+
+
+@media (max-width:535px) {
+    .item_flex_pedido textarea{
+        width: 350px;
     }
-    
+}
+
+@media (max-width:430px) {
+    .item_flex_pedido textarea{
+        width: 300px;
+        height: 250px;
+    }
+} 
+
+
+@media (max-width:360px) {
+    .item_flex_pedido textarea{
+        width: 250px;
+        height: 200px;
+    }
+}
