--- a/PI/src/Css/style.css
+++ b/PI/src/Css/style.css
@@ -59,6 +59,13 @@
 
 
 
+main{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
 
 body{
   display: flex;
@@ -67,14 +74,23 @@ body{
   flex-direction: column;
 }
 
+.body2{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
 
-main{
+}
+
+
+.main3{
   display: flex;
   width: 100%;
   height: 100vh;
   overflow: hidden;
   flex-direction: column;
 } 
+
 
 .main2{
   display: flex;
@@ -87,13 +103,9 @@ main{
 
 } 
 
-.body2{
-  display: flex;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
 
-}
+
+
 
 
 
