--- a/PI/src/Css/adm_default.css
+++ b/PI/src/Css/adm_default.css
@@ -121,7 +121,7 @@
     
 }
 
-.btn_item_listar_adm{
+#btn_item_listar_adm{
     display: flex;
     width: 100px;
     height: 40px;
@@ -135,17 +135,14 @@
     font-weight: 500;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
+    font-size: 13px;
 
 }
 
 
 
-button:focus {
-    outline: none;
-    border: none;
-}
 
-.btn_item_listar_adm:hover{
+#btn_item_listar_adm:hover{
     color: #9c9c9c;
 }
 
@@ -159,7 +156,7 @@ button:focus {
     
 }
 
-.container_listar_header_adm .container_listar_header_adm_right input{
+.container_listar_header_adm .container_listar_header_adm_right #input_search{
     display: flex;
     width: 360px;
     outline: none;
@@ -168,7 +165,8 @@ button:focus {
     border: none;
     background-color: #ffffff;
     border-radius: 20px;
-    padding-left: 50px;
+    padding-left: 40px;
+    font-size: 14px;
 
 }
 
@@ -182,7 +180,7 @@ button:focus {
 }
 
 
-.container_listar_header_adm .container_listar_header_adm_right .btn_search_listar{
+.container_listar_header_adm .container_listar_header_adm_right #btn_search_listar{
     display: flex;
     width: 100px;
     height: 40px;
@@ -195,10 +193,11 @@ button:focus {
     border: none;
     font-weight: 500;
     transition: all 0.2s ease-in-out;
+    outline: none;
 
 }
 
-.container_listar_header_adm .container_listar_header_adm_right .btn_search_listar:hover{
+.container_listar_header_adm .container_listar_header_adm_right #btn_search_listar:hover{
     background-color: rgb(161, 161, 161);
 }
 
@@ -279,8 +278,8 @@ button:focus {
     left: calc(1.5rem - 1.6rem);
     top: calc(1.5rem - 1.6rem);
     display: block;
-    height: 1rem;
-    width: 1rem;
+    height: 1.2rem;
+    width: 1.1rem;
     cursor: pointer;
     border: 1px solid rgba(100, 116, 139, 0.527);
     border-radius: 9999px;
@@ -306,12 +305,17 @@ button:focus {
 .container_item_list_ações a i{
     color: #4A4A4A;
 }
+.container_item_list_ações a{
+    text-decoration: none;
+    display: flex;
+}
 .container_item_list_ações a .fa-trash{
     color:#FA301E;
 }
 
 .container_item_list_ações a:hover{
     background-color: #e6e6e6;
+    text-decoration: none;
 }
 
 .container_item_list_status {
@@ -411,13 +415,21 @@ button:focus {
 
 
 }
-
+/* 
 .item_dados_adm{
     display: flex;
     flex-direction: column;
     gap: 5px;
+    background-color: aqua;
 
 
+} */
+
+
+.item_dados_adm{
+    display: flex;
+    flex-direction: column;
+    gap: none;
 }
 
 .card_item_dados i{
@@ -451,6 +463,7 @@ button:focus {
     font-weight: 600;
     color: #4A4A4A;
     font-size: 25px;
+    height: 30px;
 }
 .item_dados_adm .text_item_dados{
     display: flex;
@@ -689,6 +702,7 @@ button:focus {
 
     .item_dados_adm .n_item_dados{
         font-size: 20px;
+        height: 20px;
     }
 
     .item_dados_adm .text_item_dados{
@@ -703,8 +717,14 @@ button:focus {
         font-size: 13px;
     }
 
-    .container_listar_header_adm .container_listar_header_adm_right input{
+    .container_listar_header_adm .container_listar_header_adm_right #input_search{
         width: 300px;
+        font-size: 12px;
+    }
+
+
+    .container_listar_header_adm .container_listar_header_adm_right #btn_search_listar{
+        font-size: 14px;
     }
 }
 
@@ -712,6 +732,7 @@ button:focus {
 @media (max-width:863px){
     .conatiner_cadastro_adm_items_header{
         flex-direction: column;
+        
     }
 
     .conatiner_cadastro_adm_items_header_left{
@@ -744,14 +765,15 @@ button:focus {
         height: 50px;
     }
 
-    .table_adm_list td{
+    .table_adm_list td,.conatiner_text_nome_list p{
         font-size: 11px;
+        
     }
     .table_adm_list th{
         font-size: 11px;
     }
 
-    .btn_item_listar_adm{
+    #btn_item_listar_adm{
         width: 90px;
         height: 35px;
         font-size: 11px;
@@ -763,15 +785,21 @@ button:focus {
     }
     .item_dados_adm .n_item_dados{
         font-size: 15px;
+        height: 10px;
     }
     .item_dados_adm .text_item_dados{
         font-size: 11px;
     }
 
+
+    .container_listar_header_adm .container_listar_header_adm_right #btn_search_listar{
+        font-size: 12px;
+    }
+
 }
 
 @media (max-width:628px) {
-    .btn_item_listar_adm{
+    #btn_item_listar_adm{
         height: 30px;
         width: 60px;
     }
@@ -784,12 +812,13 @@ button:focus {
         justify-content: center;
         width: 70%;
     }
-    .container_listar_header_adm .container_listar_header_adm_right input{
+    .container_listar_header_adm .container_listar_header_adm_right #input_search{
         width: 230px;
         height: 35px;
+        font-size: 11px;
     }
 
-    .container_listar_header_adm .container_listar_header_adm_right .btn_search_listar{
+    .container_listar_header_adm .container_listar_header_adm_right #btn_search_listar{
         width: 70px;
         height: 35px;
     }
@@ -841,16 +870,18 @@ button:focus {
         font-size: 10px;
     }
 
-    .conatiner_text_nome_list p{
-        font-size: 10px;
+
+    .table_adm_list td, .table_adm_list th,.conatiner_text_nome_list p{
+        font-size: 12px;
     }
 
-    .table_adm_list td, .table_adm_list th{
-        font-size: 10px;
+    #Mob_table_none_th, #Mob_table_none_td{
+        display: none;
     }
 
-    .container_listar_header_adm .container_listar_header_adm_right input{
+    .container_listar_header_adm .container_listar_header_adm_right #input_search{
         width: 360px;
+        font-size: 10px;
     }
 
     .container_title_adm_right .btn_add_item_adm{
@@ -858,11 +889,36 @@ button:focus {
         font-size: 13px;
     }
 
-    .container_listar_header_adm .container_listar_header_adm_right .btn_search_listar{
+    .container_listar_header_adm .container_listar_header_adm_right #btn_search_listar{
         height: 30px;
         font-size: 10px;
         width: 100px;
     }
+
+    
+    .container_listar_header_adm .container_listar_header_adm_right i{
+        left: 30px;
+    }
+
+    
+/* From Uiverse.io by Yaya12085 */ 
+.container_item_list_ações .switch {
+    height: 0.7rem;
+    width: 1.7rem;
+  }
+  
+
+  
+  .container_item_list_ações .switch::before {
+    left: calc(1.5rem - 1.6rem);
+    top: calc(1.5rem - 1.6rem);
+    height: 0.9rem;
+    width: 0.9rem;
+
+  }
+  
+
+
 
 
 
@@ -885,7 +941,7 @@ button:focus {
         width: 250px;
     }
     .container_listar_header_adm .container_listar_header_adm_right i{
-        left: 35px;
+        left:10px;
     }
 
     .conatiner_cont_dados_adm{
@@ -933,8 +989,9 @@ button:focus {
 @media (max-width: 548px){
 
     .container_listar_header_adm .container_listar_header_adm_right i{
-        left: 25px;
+        left: 10px;
     }
+
 
 
 }
@@ -970,18 +1027,23 @@ button:focus {
     }
 
     
-    .container_item_list_ações .switch {
-        height: 0.7rem;
-        width: 1.3rem;
-    }
-    
-    
-    .container_item_list_ações .switch::before {
-        display: block;
-        height: 0.7rem;
-        width: 0.7rem;
-    
-    }
+    /* From Uiverse.io by Yaya12085 */ 
+.container_item_list_ações .switch {
+    height: 0.7rem;
+    width: 1.7rem;
+  }
+  
+
+  
+  .container_item_list_ações .switch::before {
+    left: calc(1.5rem - 1.6rem);
+    top: calc(1.5rem - 1.6rem);
+    height: 0.9rem;
+    width: 0.9rem;
+
+  }
+  
+
 
     .conatiner_cadastro_adm_items_body_list{
         border: none;
@@ -1005,11 +1067,17 @@ button:focus {
     }
 
     .container_item_list_ações{
-        gap: 0.3rem;
+        gap: 0.1rem;
     }
-    .conatiner_text_nome_list p{
-        font-size: 9px;
+
+    
+    .container_listar_header_adm .container_listar_header_adm_right i{
+        left: 10px;
     }
+    .table_adm_list td, .table_adm_list th,.conatiner_text_nome_list p{
+        font-size: 10px;
+    }
+
 
 
 }
@@ -1037,6 +1105,40 @@ button:focus {
     .conatiner_cadastro_adm_items_body_pesquisa{
         justify-content: center;
     }
+
+    .container_listar_header_adm .container_listar_header_adm_right i{
+        left: 10px;
+    }
+
+
+
+}
+@media (max-width: 390px){
+    .container_listar_header_adm .container_listar_header_adm_right #input_search{
+        width: 180px;
+        font-size: 8px;
+    }
+    .container_listar_header_adm .container_listar_header_adm_right i{
+        left: 25px;
+        font-size: 14px;
+    }
+
+    .text_alin_item{
+        display: none;
+
+    }
+
+     .none_mob{
+        display: none;
+    } 
+
+    .table_adm_list th{
+        font-size: 10px;
+    }
+    .table_adm_list td,.conatiner_text_nome_list p{
+        font-size: 10px;
+    }
+
 
 
 
