--- a/PI/src/Css/style_adm.css
+++ b/PI/src/Css/style_adm.css
@@ -2,14 +2,26 @@
 @import url('https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
  
 
-
+/* 
 @import url(adm_default.css);
 @import url(dashbord_adm.css);
 @import url(cadastrar_categoria_adm.css);
 @import url(cadastrar_produto_adm.css);
 @import url(pedido_disponivel_adm.css);
 @import url(pedido_personalizado_adm.css);
-@import url(cadastrar_banner_adm.css);
+@import url(cadastrar_banner_adm.css); 
+ */
+
+
+ @import url(adm_default.css);
+ @import url(dashbord_adm.css);
+ @import url(cadastrar_banner_adm.css);
+ @import url(cadastrar_categoria_adm.css);
+ @import url(cadastrar_produto_adm.css);
+ @import url(pedido_disponivel_adm.css);
+ @import url(pedido_personalizado_adm.css);
+ 
+
 
 
 *{
@@ -124,9 +136,10 @@
 
 
 
-.side_bar-itens.active a{
+.side_bar-itens.active a i{
     color:#FA301E;
     text-decoration: none;
+
 }
 
 .side_bar-itens a i{
@@ -137,6 +150,7 @@
     height: 20px;
     font-size: 17px;
     text-decoration: none;
+    color: #898989;
 }
 
 
@@ -245,153 +259,119 @@
         width: 100%;
         height: 100%;
         position: relative;
-        padding: 20px;
+        padding: 10px;
     }
     #sidebar_adm{
         display: none;
     }
 
     .nav_mobile_adm{
-        display: flex;
+        /* display: flex; */
         position: absolute;
         width: 100%;
-        bottom: 30px;
+        bottom:20px;
         height: auto;
         position: fixed;
+        z-index: 3;
         justify-content: center;
         align-items: center;
-        z-index: 3;
+        display: none;
 
     }
 
-    .nav_bar_content_mobile_adm{
+    .nav_mobile_adm .nav_bar_content_mobile_adm{
         display: flex;
-        list-style: none;
+        background-color:#252525;
         width: 55%;
         justify-content: center;
         align-items: center;
-        background-color: #252525;
-        padding: 1.2rem;
-        border-radius: 20px;
-
+        list-style: none;
+        height:70px;
+        border-radius: 10px;
     }
-    .nav_bar_content_mobile_adm ul{
+
+    .nav_mobile_adm .nav_bar_content_mobile_adm ul{
         display: flex;
-        width: 100%;
+        list-style: none;
         gap: 3rem;
         justify-content: center;
         align-items: center;
-        list-style: none;
     }
 
-    .nav_bar_content_mobile_adm ul li{
+    .nav_mobile_adm .nav_bar_content_mobile_adm ul li{
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 16px;
     }
-    
-    .nav_bar_content_mobile_adm ul li a{
-        color: #898989;
-        font-size: 18px;
+    .nav_mobile_adm .nav_bar_content_mobile_adm ul li a{
+        display: flex;
+        color:#898989;
+        transition: all 0.2s ease-in-out;
+        text-decoration: none;
     }
-    .nav_bar_content_mobile_adm ul li a:hover{
+
+    .nav_mobile_adm .nav_bar_content_mobile_adm ul li a:hover{
         color: white;
+        text-decoration: none;
     }
 
+
+    .nav_mobile_adm .nav_bar_content_mobile_adm ul li .active_mob{
+        color: white;
+        text-decoration: none;
+    }
 
 
 
     
 }
-@media (max-width: 680px) {
 
+@media (max-width: 645px) {
 
-    .nav_bar_content_mobile_adm{
+    .nav_mobile_adm .nav_bar_content_mobile_adm{
         display: flex;
-        list-style: none;
         width: 65%;
-        justify-content: center;
-        align-items: center;
-        background-color: #252525;
-        padding: 1.2rem;
-        border-radius: 20px;
-
-    }
-
-    .nav_bar_content_mobile_adm ul li a{
-        color: #898989;
-        font-size: 18px;
+        height:70px;
+      
     }
 
 
-    
 }
-@media (max-width: 580px) {
 
+@media (max-width: 532px) {
 
-    .nav_bar_content_mobile_adm{
+    .nav_mobile_adm .nav_bar_content_mobile_adm{
         display: flex;
-        list-style: none;
         width: 75%;
-        justify-content: center;
-        align-items: center;
-        background-color: #252525;
-        padding: 1.2rem;
-        border-radius: 20px;
-
-    }
-
-    .nav_bar_content_mobile_adm ul li a{
-        color: #898989;
-        font-size: 16px;
+        height:70px;
+      
     }
 
 
-    
 }
-@media (max-width: 480px) {
+@media (max-width: 468px) {
 
-
-    .nav_bar_content_mobile_adm{
+    .nav_mobile_adm .nav_bar_content_mobile_adm{
         display: flex;
-        list-style: none;
-        width: 95%;
-        justify-content: center;
-        align-items: center;
-        background-color: #252525;
-        padding: 1.2rem;
-        border-radius: 20px;
-
-    }
-
-    .nav_bar_content_mobile_adm ul li a{
-        color: #898989;
-        font-size: 16px;
+        width: 85%;
+        height:70px;
+      
     }
 
 
-    
 }
-@media (max-width: 380px) {
+@media (max-width: 408px) {
 
-
-    .nav_bar_content_mobile_adm{
+    .nav_mobile_adm .nav_bar_content_mobile_adm{
         display: flex;
-        list-style: none;
-        width: 95%;
-        justify-content: center;
-        align-items: center;
-        background-color: #252525;
-        padding: 1.2rem;
-        border-radius: 20px;
-
-    }
-
-    .nav_bar_content_mobile_adm ul li a{
-        color: #898989;
-        font-size: 15px;
+        width: 98%;
+        height:65px;
+      
     }
 
 
-    
+
+
+
 }
