--- a/PI/src/Css/produto_personalizado.css
+++ b/PI/src/Css/produto_personalizado.css
@@ -369,11 +369,14 @@
     
     .image-preview{
         flex-direction: column;
+        justify-content: center;
+        display: flex;
+        align-items: center;
     }
 
     .image-container img{
-        width: 50px;
-        height: 50px;
+        width: 150px;
+        height: 100px;
     }
     
 }
