--- a/PI/src/Css/categorias.css
+++ b/PI/src/Css/categorias.css
@@ -24,13 +24,14 @@
 
 .container_title_left_categoria{
     display: flex;
-    justify-content: center;
+    justify-content:start;
+    width: 65%;
     gap: 10px;
 
 }
 
 
-.container_title_left_categoria .title_left_categoria{
+ .title_left_categoria{
     display: flex;
     font-size: 14px;
     color: #4A4A4A;
@@ -45,10 +46,10 @@
 .container_left_filtro{
     display: flex;
     width: 70%;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(255, 255, 255);
     padding: 1rem;
     border-radius: 5px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 1rem;
@@ -123,19 +124,27 @@
 .conatiner_input_preco{
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    width: 65%;
+    justify-content:start;
 }
 
 
 .conatiner_input_preco input {
-    width: 100%;
+    width: 60%;
 }
 
 
 .range-value {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 5px;
-    font-size: 14px;
+    font-size: 16px;
     color: #555;
+    font-weight: 500;
+    width: 65%;
+    
 }
 
 
@@ -184,7 +193,7 @@
 .wrap__filtro_right{
     display: flex;
     flex-wrap: wrap;
-    width: 90%;
+    width: 100%;
     gap: 5rem;
     padding-top: 2rem;
 }
