--- a/PI/src/Css/comprar_produto.css
+++ b/PI/src/Css/comprar_produto.css
@@ -20,7 +20,7 @@
     width: 100%;
     align-items: center;
     padding-left: 2rem;
-    padding-top: 1rem;
+
 
 }
 
@@ -275,6 +275,51 @@
 }
 
 
+.container_buy_quant{
+    display: flex;
+    gap: 2rem;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color:#eeeeee90;
+    padding: 0.5rem;
+}
+.container_buy_buy{
+    display: flex;
+    gap: 2rem;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem;
+}
+
+.container_buy_quant .menos_cart, .container_buy_quant .mais_cart{
+    display: flex;
+    font-size: 17px;
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    border-radius: 50%;
+
+} 
+
+.container_buy_quant .menos_cart:hover, .container_buy_quant .mais_cart:hover{
+    background-color: #d3d3d3;
+}
+
+.container_buy_quant  .quant_cart_solo{
+    font-size: 22px;
+    display: flex;
+    color: #4A4A4A;
+    font-weight: 500;
+}
+
+
 
 .container_buy_produto{
     display: flex;
@@ -284,6 +329,9 @@
     align-items: center;
     width: 100%;
 }
+
+
+
 
 .container_buy_produto input{
     display: flex;
@@ -507,8 +555,27 @@
 .icone_produto_solo_item{
     color: #4A4A4A;
     cursor: pointer;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 
+}
+
+.icone_produto_solo_item:hover{
+    background-color: #e5e5e5;
+
+}
+
+.shape_solo{
+    display: flex;
+    width: 100%;
+    height: 1px;
+    background-color: #e7e7e7;
+    border-radius: 10px;
 }
 
 
@@ -520,7 +587,7 @@
     overflow: hidden; /* Evitar que conteúdo fique visível durante a animação */
     visibility: hidden;
     display: flex;
-    background-color: aqua;
+
     transition: all 0.2s ease;
 }
 
@@ -531,6 +598,47 @@
 
 
 }
+
+.descricao_produto_solo_cont_body:has(.active_solo) .icone_produto_solo_item{
+    transform: rotate(180deg);
+
+}
+
+
+
+
+
+.descricao_produto_solo_cont_body .descricao_solo{
+    display: flex;
+
+    padding: 1rem;
+    width: 100%;
+    color: #4A4A4A;
+    font-size: 15px;
+    text-align: justify;
+    background-color: #eeeeee5e;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* 
@@ -679,6 +787,12 @@ gap: 1rem;
 
 @media (max-width:900px) {
 
+    
+    .display_none_solo{
+        display: none;
+        
+    }
+
     .product-container {
         display: flex;
         height: 100%;
@@ -725,6 +839,7 @@ gap: 1rem;
 .container_buy_produto2{
     display: flex;
     gap: 1rem;
+    flex-direction: column;
     }
     
 .container_buy_produto{
@@ -753,9 +868,7 @@ gap: 1rem;
     gap: 1rem;
 }
 
-.none_display{
-    display: none;
-}
+
 
 
 
@@ -793,11 +906,6 @@ gap: 1rem;
     gap: 1rem;
 }
 
-.none_display{
-    display: none;
-}
-
-
 
 .container_produto_relacionados{
     display: flex;
@@ -822,11 +930,7 @@ gap: 1rem;
 
 @media (max-width:545px) {
 
-    
-.comprar_produto_medium, .comprar_produto_bottom{
-    padding-top: 10rem;
 
-}
 
 .container_descricao_produto{
     display: flex;
@@ -835,10 +939,6 @@ gap: 1rem;
     justify-content: center;
     flex-direction: column;
     gap: 1rem;
-}
-
-.none_display{
-    display: none;
 }
 
 
@@ -885,11 +985,6 @@ gap: 1rem;
 @media (max-width:490px) {
 
     
-.comprar_produto_medium, .comprar_produto_bottom{
-    padding-top: 15rem;
-
-}
-
 .container_descricao_produto{
     display: flex;
     width:90%;
@@ -899,9 +994,6 @@ gap: 1rem;
     gap: 1rem;
 }
 
-.none_display{
-    display: none;
-}
 
 
 
@@ -966,7 +1058,7 @@ gap: 1rem;
 @media (max-width:418px) {
 
     .comprar_produto_medium, .comprar_produto_bottom{
-        padding-top: 22rem;
+        padding-top: 5rem;
     
     }
  
@@ -984,7 +1076,7 @@ gap: 1rem;
 @media (max-width:360px) {
 
     .comprar_produto_medium, .comprar_produto_bottom{
-        padding-top: 30rem;
+        padding-top:5rem;
     
     }
 
@@ -1002,7 +1094,7 @@ gap: 1rem;
 @media (max-width:340px) {
 
     .comprar_produto_medium, .comprar_produto_bottom{
-        padding-top: 35rem;
+        padding-top: 5rem;
     
     }
     .thumbnail{
