--- a/PI/src/Css/modal.css
+++ b/PI/src/Css/modal.css
@@ -1,10 +1,12 @@
 
 dialog:not([open]) {
     display: none;
+    outline: none;
 }
 
 dialog::backdrop{
     background-color: #00000080;
+    outline: none;
 }
 
 
@@ -15,6 +17,7 @@ dialog{
     border-radius: 5px;
     justify-self: center;
     align-self: center;
+    outline: none;
 }
 
 
@@ -31,6 +34,21 @@ dialog{
     display: flex;
     outline: none;
     border: none;
+}
+
+
+.close-modal{
+    display: flex;
+    border: none;
+    outline: none;
+}
+
+.close-modal i{
+    display: flex;
+ 
+    border: none;
+    outline: none;
+
 }
 .modal_header button{
     display: flex;
@@ -235,6 +253,86 @@ dialog{
     font-size: 15px;
     color: #4A4A4A;
 }
+
+
+
+
+.conatiner_item_modal_link_zap form{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+
+}
+
+.item_star_modal{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1.3rem;
+}
+
+.item_star_modal textarea{
+    display: flex;
+    width: 100%;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
+    outline: #b4b4b4;
+    padding: 10px;
+    color: #4A4A4A;
+    font-size: 13px;
+    height: 100px;
+    resize:none;
+
+}
+
+
+.conatiner_comentario_star_modal{
+    display: flex;
+    gap: 5px;
+
+}
+
+.conatiner_comentario_star_modal .fa-star{
+    font-size: 23px;
+    display: flex;
+    color: #cbcbcb;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.conatiner_comentario_star_modal .fa-star:hover{
+    color: #ff9900;;
+}
+
+.container_avalirar_btn{
+    display: flex;
+    width: 100%;
+    justify-content: end;
+}
+.container_avalirar_btn .avaliar_btn{
+    display: flex;
+    width: 100px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    background-color: #4A4A4A;
+    color: white;
+    font-size: 13px;
+    font-weight: 500;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    border-radius: 5px;
+
+}
+
+.container_avalirar_btn .avaliar_btn:hover{
+    background-color: #2b2b2b;
+}
+
 
 
 
