--- a/PI/src/Css/historico_pedido.css
+++ b/PI/src/Css/historico_pedido.css
@@ -7,12 +7,19 @@
     align-items: center;
 }
 
+.conatiner_gap_body_cart{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 4rem;
+}
 .container_historico_pedido .container_body_cart{
     background-color: #f7f7f7;
     box-shadow: rgba(14, 63, 126, 0.04) 0px 0px 0px 1px, rgba(42, 51, 69, 0.04) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px 6px 6px -3px, rgba(14, 63, 126, 0.04) 0px 12px 12px -6px, rgba(14, 63, 126, 0.04) 0px 24px 24px -12px;
     padding: 1rem;
     border-radius: 5px;
     position: sticky;
+
 
 
 }
