--- a/PI/src/Css/style_adm.css
+++ b/PI/src/Css/style_adm.css
@@ -266,7 +266,7 @@
     }
 
     .nav_mobile_adm{
-        /* display: flex; */
+        display: flex;
         position: absolute;
         width: 100%;
         bottom:20px;
@@ -275,7 +275,7 @@
         z-index: 3;
         justify-content: center;
         align-items: center;
-        display: none;
+
 
     }
 
