--- a/PI/src/Css/cadastro.css
+++ b/PI/src/Css/cadastro.css
@@ -196,17 +196,13 @@ Area Texto Cadastro */
   display: flex;
   width: 100%;
   justify-content: center;
-  padding-top: 3rem;
+  padding-top: 2rem;
 
 }
 
-.btn-cadastro a{
-  text-decoration: none;
-  display: flex;
-  width:100%;
-}
 
-.btn-cadastro a button{
+
+.btn-cadastro button{
   display: flex;
   width: 100%;
   height: 45px;
@@ -240,7 +236,7 @@ Area Texto Cadastro */
   gap: 5px;
   justify-content: center;
   color: #272727;
-  padding-top: 4rem;
+  padding-top: 2rem;
 
 }
 
@@ -253,6 +249,19 @@ Area Texto Cadastro */
 }
 
 
+.msg_erro{
+  display: flex;
+  font-size: 13px;
+  color: #FA301E;
+  font-weight: 500;
+}
+
+.msg_sucesso{
+  display: flex;
+  font-size: 13px;
+  color: #1e840a;
+  font-weight: 500;
+}
 
 
 
