--- a/PI/src/Css/sobre_nos.css
+++ b/PI/src/Css/sobre_nos.css
@@ -769,6 +769,20 @@
 MEDIA QUERIES SOBRE */
 
 
+@media (max-width:1182px) {
+
+    .title_text_about,.title_text_about2{
+        font-size: 20px;  
+    }
+
+    .title_section_sobre{
+        margin-bottom: 5rem;
+
+    }
+    
+}
+
+
 
 @media (max-width:1000px) {
 
@@ -1013,7 +1027,7 @@ MEDIA QUERIES SOBRE */
 .about_text{
     display: flex;
     width: 100%;
-    height: 70vh;
+    height: 100%;
 }
 
 .content_about_text{
@@ -1158,6 +1172,12 @@ MEDIA QUERIES SOBRE */
 
 }
 
+.title_text_about,.title_text_about2{
+    font-size: 20px;  
+    margin-bottom: 2rem;
+}
+
+
 
 
 
@@ -1170,6 +1190,13 @@ MEDIA QUERIES SOBRE */
 }
 
 @media (max-width:820px) {
+    
+.title_text_about,.title_text_about2{
+    font-size: 17px;  
+    margin-bottom: 2rem;
+}
+
+
 
     
 
@@ -1800,15 +1827,11 @@ MEDIA QUERIES SOBRE */
             font-size: 10px;
         }
 
-        .title_text_about{
-            display: flex;
-            color: #969696;
-            font-size: 23px;
-            font-weight: 700;
-            padding-top: 2rem;
-            text-transform: uppercase;
-            gap: 5px;
+        .title_text_about,.title_text_about2{
+            font-size: 15px;  
+            margin-bottom: 2rem;
         }
+        
         
         
         
@@ -2232,16 +2255,12 @@ MEDIA QUERIES SOBRE */
         font-weight: 400;
         width: 90%;
         font-size: 10px;
+        margin-bottom: 3rem;
     }
 
-    .title_text_about{
-        display: flex;
-        color: #969696;
-        font-size: 23px;
-        font-weight: 700;
-        padding-top: 2rem;
-        text-transform: uppercase;
-        gap: 5px;
+    .title_text_about,.title_text_about2{
+        font-size: 15px;  
+        margin-bottom: 3rem;
     }
     
     
@@ -2270,6 +2289,7 @@ MEDIA QUERIES SOBRE */
     
     .content_btn_about{
         height: 40%;
+        margin-top: 3rem;
     }
     
     .btn_about{
@@ -2949,8 +2969,7 @@ padding-bottom: 2rem;
     
     
     
-    
-    
+
     
     
         
