Link logout, require de perfil

--- a/PI/src/Css/favoritos.css
+++ b/PI/src/Css/favoritos.css
@@ -42,7 +42,8 @@
     flex-direction: column;
     height: 50%;
     justify-content: center;
-    gap: 50px;
+    gap: 40px;
+    margin-top: 2rem;
 }
 
 .item_favorito_left{
