subindo o perfil_adm.

--- a/PI/src/Css/style_adm.css
+++ b/PI/src/Css/style_adm.css
@@ -20,6 +20,8 @@
  @import url(cadastrar_produto_adm.css);
  @import url(pedido_disponivel_adm.css);
  @import url(pedido_personalizado_adm.css);
+ @import url(perfil_adm.css);
+ @import url(favoritos_adm.css);
  
 
 
