--- a/PI/src/Css/home.css
+++ b/PI/src/Css/home.css
@@ -24,6 +24,7 @@
     background-color:white;
     display: flex;
     width: 100%;
+    max-height: 400px;
     justify-content: center;
     align-items: center;
 }
@@ -439,13 +440,16 @@
 
 .banner_card{
     display: grid;
-    height: 65vh;
+    max-height: 120vh;
+    /* background-color: #ff9900; */
+    margin: 20px;
     width: 100%;
     justify-content: center;
     grid-template-columns: 50% 40%;
     gap: 1rem;
     position: relative;
     padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
 
 }
 
@@ -526,13 +530,13 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    height: 65vh;
+    max-height: 65vh;
 
 }
 
 .banners_secudarios img{
     width: 90%;
-    height: auto;
+    max-height: 65vh;
     display: block;
     margin: 0 auto;
     border-radius: 5px;
